--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+#main{
+  position: relative;
+}
+
+
 /* ************* ✅✅ Page1 ✅✅ ******************* */
 
 #page1 {
